print JMeter arguments